<resources>
    <string name="app_name">MQTT Device Controls</string>
    <string name="config_file">testConfig.json</string>
    <string name="SaveButtonText">apply</string>
    <string name="ResetButtonText">testconfig</string>
    <string name="ClearButtonText">minimal config</string>
    <string name="ReadButtonText">read current config</string>
    <string name="config_file_editor_headline">Config File Editor</string>
</resources>