<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/config_file_editor_headline"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SaveButtonText"
        android:layout_below="@+id/textView"
        android:id="@+id/saveButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResetButtonText"
        android:layout_below="@+id/saveButton"
        android:id="@+id/resetButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ClearButtonText"
        android:layout_below="@+id/saveButton"
        android:layout_toEndOf="@+id/resetButton"
        android:id="@+id/clearButton"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ReadButtonText"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/saveButton"
        android:id="@+id/readButton"
        />

    <EditText
        android:inputType="text|textMultiLine"
        android:id="@+id/configfileeditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/clearButton"
        android:autofillHints="no"/>
</RelativeLayout>